# amath-ng-cpp

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.in  NEWS  README.md  acalc-ng.hpp  aclocal.m4  amath-ng.cpp  amath-ng.hpp  amath-ng.pro  config.h  config.h.in  config.status  configure  configure.ac  flopstest.hpp  main.cpp  opcode.hpp
m4/: axboostbase.m4  axbr.m4
ops/: cubic.hpp
src/: Makefile.am  Makefile.in  amath-ng.cpp  amath-ng.hpp  combination.cpp  combination.hpp  cubic.cpp  cubic.hpp  flopstest.cpp  flopstest.hpp  main.cpp  opcode.hpp  permutation.cpp  permutation.hpp  quadratic.cpp  quadratic.hpp  vertex.cpp  vertex.hpp
